add_service->etc/systemd/system

--- a/deploy/systemd/first.service
+++ b/deploy/systemd/first.service
@@ -4,13 +4,13 @@ After=syslog.target
 After=network.target
 
 [Service]
-Type=simple
+Type=idle
 User=root
-WorkingDirectory=/home/tele/bot  # рабочая директория (каталог)
-ExecStart=/usr/bin/python3 /home/tele/bot/first/main.py  # путь до python и основного файла бота
-# ExecStart=/opt/bot/bin/python /opt/bot/bot.py --serve-in-foreground  # если используется `venv` (`/opt/` как пример)
+WorkingDirectory=/home/tele/bot/first
+ExecStart=/usr/bin/python3 /main.py
 RestartSec=10
 Restart=always
  
 [Install]
 WantedBy=multi-user.target
+
